<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="jp.techacademy.shintaro.nakagawa.finalapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_strategy"
        android:name="jp.techacademy.shintaro.nakagawa.finalapp.ui.strategy.StrategyFragment"
        android:label="@string/title_strategy"
        tools:layout="@layout/fragment_strategy" />

    <fragment
        android:id="@+id/navigation_score"
        android:name="jp.techacademy.shintaro.nakagawa.finalapp.ui.score.ScoreFragment"
        android:label="@string/title_score"
        tools:layout="@layout/fragment_score" />
</navigation>