<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <RelativeLayout
        android:id="@+id/home_gdx_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></RelativeLayout>

    <Button
        android:id="@+id/solving_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/background_color"
        android:text="@string/solving_button"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_gdx_view" />

    <Button
        android:id="@+id/time_attack_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/background_color"
        android:text="@string/time_attack_button"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/solving_button" />

    <Button
        android:id="@+id/vs_cpu_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/background_color"
        android:text="@string/vs_cpu_button"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_attack_button" />

</androidx.constraintlayout.widget.ConstraintLayout>